# aoc24_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: AocException.cpp  AocException.h  main.cpp  utils.h
src/day1/: day1.cpp  day1.h
src/day2/: Report.h  day2.cpp  day2.h
